# manipulation

./: .gitignore  CLAUDE.md  README.md  controller.py  env.py  example.py  example_rrt.py  grasping.py  grasping_rrt.py  ik.py  mp.py  pyproject.toml  setup.py  test.py
data/tabletop/: domain.pddl
envs/franka_emika_panda/: base_panda.xml  scene_mamo.xml  scene_test.xml
examples/: access19_action39_probe.py  access19_full_validation.py  access19_l4_stress_test.py  access19_lut_alignment_check.py  access19_mixed_state_viz.py  access19_phase0_profile.py  access19_replay_from_disk.py  access19_return_all_viz.py  access19_rgnet_qa.py  access19_solvability.py  access19_state_audit.py  basic_ik.py  basic_rrt.py  bench_execution.py  bench_feasibility_multilevel.py  benchmark_cylinder_grasping.py  benchmark_feasibility.py  benchmark_feasibility_params.py  benchmark_grasping.py  benchmark_parallel_rrt.py  blocks_scene.py  blocks_world_demo.py  blocks_world_rrt.py  camera_headless.py  camera_visual_test.py  debug_grasp_lift.py  demo_pick_put.py  demo_solve.py  generate_access19_curriculum.sh  generate_data.py  generate_data_multilevel_l0_l4_slurm.sh  generate_data_multilevel_slurm.sh  generate_data_slurm.sh  generate_mlb_curriculum.sh  generate_mlb_train_l0_l4.sh  grasping_ik.py  grasping_ik_planner.py  grasping_rrt.py  grasping_rrt_camera.py  grasping_rrt_planner.py  (+48 more)
manipulation/: __init__.py
manipulation/controllers/: __init__.py  position_controller.py
manipulation/core/: __init__.py  base_controller.py  base_env.py  base_ik.py
manipulation/environments/: __init__.py  franka_env.py
manipulation/ik/: __init__.py  mink_ik.py
manipulation/perception/: __init__.py  mujoco_camera.py
manipulation/planners/: __init__.py  feasibility_rrt.py  grasp_planner.py  pick_place.py  rrt_star.py
manipulation/scenes/: __init__.py  builder.py  registry.py  reloader.py
manipulation/symbolic/: __init__.py  base_domain.py  grid_domain.py  state_manager.py  visualization.py
manipulation/utils/: __init__.py  rate_limiter.py
slurm/: generate_data.sbatch  generate_eval_suites.sbatch
tampanda/: __init__.py
tampanda/controllers/: __init__.py  position_controller.py
tampanda/core/: __init__.py  base_env.py  base_mp.py
tampanda/environments/: __init__.py  franka_env.py
tampanda/gym/: __init__.py  base_env.py  goal_env.py  spaces.py  vector.py  wrappers.py
tests/: test_assets.py  test_multilevel_blocks.py  test_workspace.py
(+171 files in other folders)
