[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tampanda"
version = "1.0.0"
description = "Task and motion planning for the Franka Panda robot, built on MuJoCo and MINK"
authors = [
    { name = "Daniel Swoboda" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0.0",
    "numpy>=1.20.0",
    "mink>=0.0.1",
    "loop-rate-limiters>=1.0.0",
    "matplotlib>=3.0.0",
    "opencv-python>=4.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["tampanda*", "manipulation*"]

[tool.setuptools.package-data]
tampanda = [
    "environments/assets/franka_emika_panda/**/*",
    "scenes/templates/**/*",
]
